infra/argocd-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  tls:
  - hosts:
    - argocd.cusin-server.duckdns.org
    secretName: argocd-server-tls
  rules:
  - host: argocd.cusin-server.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
